refaktor og flow controll